--- a/static/src/sass/base/_fonts.sass
+++ b/static/src/sass/base/_fonts.sass
@@ -1,15 +1,31 @@
 // Connect fonts
-=connect-font($font, $class_name: $font, $fileType: otf)
-	@font-face
-		font-family: $font
-		src: local("#{$font}"), url(../fonts/#{$font}.#{$fileType})
+@font-face
+  font-family: 'Proxima Nova Regular'
+  src: url("../fonts/ProximaNova-Regular.eot")
+  src: url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype")
+  font-weight: normal
+  font-style: normal
 
-	@if $class_name != null
-		.#{$class_name}
-			font-family: $font
-	@else
-		.#{$font}
-			font-family: $font
 
-.font-general
-	font-family: 'Roboto', sans-serif
+@font-face
+  font-family: 'Proxima Nova Semibold'
+  src: url("../fonts/ProximaNova-Semibold.eot")
+  src: url("../fonts/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Semibold.woff") format("woff"), url("../fonts/ProximaNova-Semibold.ttf") format("truetype")
+  font-weight: normal
+  font-style: normal
+
+
+@font-face
+  font-family: 'Proxima Nova Bold'
+  src: url("../fonts/ProximaNova-Bold.eot")
+  src: url("../fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Bold.woff") format("woff"), url("../fonts/ProximaNova-Bold.ttf") format("truetype")
+  font-weight: normal
+  font-style: normal
+
+
+@font-face
+  font-family: 'Proxima Nova Extra Bold'
+  src: url("../fonts/ProximaNova-Extrabld.eot")
+  src: url("../fonts/ProximaNova-Extrabld.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Extrabld.woff") format("woff"), url("../fonts/ProximaNova-Extrabld.ttf") format("truetype")
+  font-weight: normal
+  font-style: normal
