--- a/static/src/sass/layouts/nav/_nav-hamburger.sass
+++ b/static/src/sass/layouts/nav/_nav-hamburger.sass
@@ -46,7 +46,7 @@ $hamburger-line-radius: 5px
 			+absolute(null, null, null, 0)
 			+size($hamburger-line-width, $hamburger-line-height)
 
-			background-color: $color-white
+			background-color: $color-black
 			border-radius: $hamburger-line-radius
 			
 			@extend %hamburger-transition	
