--- a/static/src/sass/layouts/nav/_nav-menu-item.sass
+++ b/static/src/sass/layouts/nav/_nav-menu-item.sass
@@ -8,15 +8,16 @@
 			a
 				display: block
 				position: relative
-				color: inherit
+				color: #919191
 				text-decoration: none
+				text-transform: uppercase
+				+font('b')
 
 			+max(md)
 				margin-bottom: 10px
 
 				a
 					padding: 10px 15px
-					color: $color-white
 
 
 			+min(md)
