--- a/templates/menu.twig
+++ b/templates/menu.twig
@@ -1,8 +1,8 @@
 {% if menu %}
 	<ul>
 	{% for item in menu %}
-		<li class="{{ item.classes | join(' ') }}">
-			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
+		<li class="nav__menu-item {{ item.classes | join(' ') }}">
+			<a class="nav__menu-item-link" target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
 			{% include "menu.twig" with {'menu': item.get_children} %}
 		</li>
 	{% endfor %}
