--- a/static/src/sass/components/_title.sass
+++ b/static/src/sass/components/_title.sass
@@ -5,7 +5,7 @@ $title-xs: ("title-xs": ('default': 18px, 'xs': 20px))
 $title-sm: ("title-sm": ('default': 20px, 'sm': 20px, 'md': 30px, 'lg': 40px))
 
 /// Define sizes for title-md
-$title-md: ("title-md": ('default': 28px, 'sm': 30px, 'md': 35px, 'lg': 40px))
+$title-md: ("title-md": ('default': 28px, 'sm': 30px, 'md': 35px, 'lg': 40px, 'xlg': 48px))
 
 /// Define sizes for title-lg
 $title-lg: ("title-lg": ('default': 30px, 'sm': 40px, 'md': 50px, 'lg': 50px, 'xlg': 60px))
