Add page navigation for archive

--- a/templates/archive/content.twig
+++ b/templates/archive/content.twig
@@ -4,6 +4,8 @@
 			{% for post in posts %}
 				{{siteMacros.review('col-12 col-sm-6', post)}}
 			{% endfor %}
+
 		</div>
+		{{function('wp_pagenavi')}}
 	</div>
 </section>
