--- a/static/src/sass/layouts/header/_header.sass
+++ b/static/src/sass/layouts/header/_header.sass
@@ -21,6 +21,7 @@
 			padding-right: 30px
 
 	&__breadcrumbs
+		margin-bottom: 15px
 		color: #636363
 		font-size: 12px
 
@@ -41,7 +42,7 @@
 	&__title
 		+relative()
 		+font('eb')
-		padding-bottom: 10px
+		padding-bottom: 15px
 
 		&:before
 			content: ""
