Add plugin remove cateogry url, add review component

--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -47,6 +47,12 @@
 // Section
 @import 'components/section'
 
+// Review
+@import 'components/review'
+
+// Page navigation
+@import 'components/wp-pagenavi'
+
 
 // Navigation
 @import 'layouts/nav/nav-variables'
