Removed archive folder, add category folder

--- a/templates/category.twig
+++ b/templates/category.twig
@@ -1,6 +1,6 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	{% include 'archive/header.twig' %}
-	{% include 'archive/content.twig' %}
+	{% include 'category/header.twig' %}
+	{% include 'category/content.twig' %}
 {% endblock %}
