End pagination in single

--- a/static/src/sass/components/_article.sass
+++ b/static/src/sass/components/_article.sass
@@ -47,11 +47,9 @@
 	&__content
 		text-align: justify
 
-	&__footer
-		margin-top: 30px
-		padding-top: 30px
-		border-top: 1px solid #ddd
+	&__video
+		+size(100%, 250px)
 
-		&-title
-			font-size: 23px
-			+font('b')
+		+min(sm)
+			min-height: 400px
+			height: 65vh
