--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -53,6 +53,9 @@
 // Page navigation
 @import 'components/wp-pagenavi'
 
+// Page navigation
+@import 'components/article'
+
 
 // Navigation
 @import 'layouts/nav/nav-variables'
