--- a/templates/single/content.twig
+++ b/templates/single/content.twig
@@ -1,9 +1,18 @@
 <section class="section">
 	<div class="container">
 		<article class="article {{post.class}}" id="{{post.id}}">
-			<div class="article__content">
-				{{post.content}}
-			</div>
+			{% if post.get_field('video') %}
+				<iframe src="https://www.youtube.com/embed/{{post.get_field('video')}}?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="article__video"></iframe>
+			{% else %}
+				<div class="article__content">
+					{{post.content}}
+				</div>
+			{% endif %}
 		</article>
+		{# PAGINATION - THESE CALL A CUSTOM FUNCTION IN FUNCTIONS.PHP TO CYCLE ONLY WITHIN OUR TAXONOMY TERM  #}    
+		<div class="row single-pagination">
+			<div class="col-6 single-pagination__prev">{{function('custom_prev_post',post.id)}}</div>
+			<div class="col-6 single-pagination__next">{{function('custom_next_post',post.id)}}</div>
+		</div> 
 	</div>
 </section>
