Fix article component

--- a/static/src/sass/components/_article.sass
+++ b/static/src/sass/components/_article.sass
@@ -8,8 +8,8 @@
 		padding-left: 15px
 
 	h1,h2,h3,h4,h5,h6
-		+margin-y(20px)
-		+font('b')
+		+margin-y(45px, 15px)
+		+font('eb')
 		color: $color-brand-1
 
 	blockquote
@@ -21,7 +21,6 @@
 
 		font-style: italic
 		+font('b')
-		color: $color-brand-2
 		
 		&:before,
 		&:after
@@ -35,6 +34,7 @@
 
 		&:after
 			+size(40px)
+			opacity: 0.23
 			+bg('../img/left-quote.svg')
 
 		p
