Fix footer responsive

--- a/static/src/sass/layouts/footer/_footer.sass
+++ b/static/src/sass/layouts/footer/_footer.sass
@@ -12,6 +12,10 @@
 			align-items: center
 			justify-content: space-between
 
+	&__column
+		+max(sm)
+			+offset()
+
 	&__contacts
 		+min(md)
 			display: flex
