Add new icon wpbakery component, change button

--- a/static/src/sass/components/button/_button-helpers.sass
+++ b/static/src/sass/components/button/_button-helpers.sass
@@ -16,11 +16,11 @@ $btn-border-style: solid
 
 // 1 key - background
 // 2 key - text color
-$btn-static: ("white": ($color-white, $color-brand-1), "brand-1": ($color-brand-1, $color-white))
+$btn-static: ("white": ($color-white, $color-brand-1), "brand-1": ($color-brand-1, $color-black))
 
 // 1 key - border-color
 // 2 key - text color
-$btn-border: ("brand-1": ($color-brand-1, $color-brand-1))
+$btn-border: ("brand-1": ($color-brand-1, $color-black))
 
 =btn-size($btn-padding, $btn-font-size)
   padding: $btn-padding
@@ -31,7 +31,7 @@ $btn-border: ("brand-1": ($color-brand-1, $color-brand-1))
   color: $btn-color
 
   &:before
-    background-color: darken($btn-background, 15%)
+    background-color: darken($btn-background, 5%)
 
 =btn-border($btn-border-color, $btn-color)
   border-color: $btn-border-color
