Add duplicate-post plugin, change vc_new_icon

--- a/static/src/sass/pages/landing/components/_icon.sass
+++ b/static/src/sass/pages/landing/components/_icon.sass
@@ -1,5 +1,5 @@
 .icon
-	text-align: center
+	
 
 	@at-root
 		%offset
@@ -9,6 +9,7 @@
 				margin-bottom: 45px
 
 	&__header
+		text-align: center
 		@extend %offset
 		&-image
 			height: 90px
@@ -21,8 +22,11 @@
 
 			font-size: 20px
 
-	&__btn
+	&__footer
+		text-align: center
 
+	&__btn
+		
 		+min(sm)
 			padding: 30px
 			font-size: 20px
