--- a/templates/partial/review.twig
+++ b/templates/partial/review.twig
@@ -1,19 +1,20 @@
 <div class="review {{class}}">
+	{#{function('print_r', post)}#}
 	<div class="review__header">
-		<p class="review__header-category">{{ post.terms('category') | join(', ') }}</p>
-		<p class="review__header-name">{{post.name}}</p>
+		<p class="review__header-category">{{ category }}</p>
+		<p class="review__header-name">{{title}}</p>
 	</div>
 	<div class="review__content">
-		{% if post.get_field('video') %}
-			<a href="{{post.link}}" class="review__content-link">
-				<img src="{{post.thumbnail|resize(560,320)}}" alt="{{post.name}}" class="review__content-image">
+		{% if video %}
+			<a href="{{link}}" class="review__content-link">
+				<img src="{{image|resize(560,320)}}" alt="{{title}}" class="review__content-image">
 			</a>
 		{% else %}
 			<div class="review__content-info">
-				<img src="{{post.thumbnail|resize(126,126)}}" alt="{{post.name}}" class="review__content-info-image">
+				<img src="{{image|resize(126,126)}}" alt="{{title}}" class="review__content-info-image">
 				<div class="review__content-info-body">
-					<div class="review__content-info-body-excerpt">{{post.preview.read_more('').end('').length(20)}}</div>
-					<a href="{{post.link}}" class="review__content-info-body-link">Читать полностью</a>
+					<div class="review__content-info-body-excerpt">{{excerpt}}</div>
+					<a href="{{link}}" class="review__content-info-body-link">Читать полностью</a>
 				</div>
 			</div>
 		{% endif %}
