--- a/static/src/sass/layouts/nav/_nav-menu-item.sass
+++ b/static/src/sass/layouts/nav/_nav-menu-item.sass
@@ -13,6 +13,12 @@
 				text-transform: uppercase
 				+font('b')
 
+			&.current-menu-item a
+				color: $color-brand-1
+				&:before,
+				&:after
+					width: 100%
+
 			+max(md)
 				margin-bottom: 10px
 
