Fix reviev type 1

--- a/static/src/sass/components/button/_button-helpers.sass
+++ b/static/src/sass/components/button/_button-helpers.sass
@@ -20,7 +20,7 @@ $btn-static: ("white": ($color-white, $color-brand-1), "brand-1": ($color-brand-
 
 // 1 key - border-color
 // 2 key - text color
-$btn-border: ("brand-1": ($color-brand-1, $color-black))
+$btn-border: ("white": ($color-white, $color-white))
 
 =btn-size($btn-padding, $btn-font-size)
   padding: $btn-padding
