--- a/static/src/sass/components/button/_button.sass
+++ b/static/src/sass/components/button/_button.sass
@@ -51,9 +51,9 @@
 	//- Iteration button fluid color
 	//-
 
-	+btn-static-iteration
+	+btn-static-iteration()
 
 	//-
 	//- Iteration button border-color
 	//-
-	//+btn-border-iteration
+	+btn-border-iteration()
