Update hover of btn-border-white

--- a/static/src/sass/components/button/_button.sass
+++ b/static/src/sass/components/button/_button.sass
@@ -34,18 +34,9 @@
 		&:hover
 			box-shadow: none
 
-	&_nav
-		background-color: $color-responsive-menu-light
-
-		+max(md)
-			padding: 15px
-			width: 100%
-			font-size: 18px
-			text-align: left
-
-
-		+min(md)
-			background-color: $color-brand-1
+	&_border-white
+		&:hover
+			color: $color-black
 
 	//-
 	//- Iteration button fluid color
