--- a/static/src/sass/layouts/nav/_nav-menu.sass
+++ b/static/src/sass/layouts/nav/_nav-menu.sass
@@ -7,11 +7,10 @@
 			
 			+fixed($nav-responsive-height, null, null, 0)
 			+size(270px, 100%)
-			padding: 0 0 100px 0
-			z-index: z("default")
+			padding: 15px 0 100px 0
 			overflow-y: auto
 
-			+transition
+			+transition()
 
 			background-color: $color-responsive-menu
 			transform: translateZ(0) translateY(-120%)
