--- a/templates/partial/review.twig
+++ b/templates/partial/review.twig
@@ -2,7 +2,7 @@
 	{#{function('print_r', post)}#}
 	<div class="review__header">
 		<p class="review__header-category">{{ category }}</p>
-		<p class="review__header-name">{{title}}</p>
+		<h2 class="review__header-name">{{title}}</h2>
 	</div>
 	<div class="review__content">
 		{% if video %}
